refactor(protocol, host): improve connection handling, startup synchronization, and error diagnostics
Refactored connection and startup synchronization logic for hosted and headless Minecraft server tests. Introduced error diagnostics for failures during initial-world synchronization and Play stage transitions. Enhanced resource cleanup with `NonCancellable` contexts and improved timeout handling across protocol stages. Simplified some `toString` implementations and updated constants/documentation for consistency.